<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:padding="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:text="Item Name: "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_weight="1"
                android:id="@+id/edt_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/edt_enter_name"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:text="Item Price: "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_weight="1"
                android:id="@+id/edt_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/edt_enter_price"
                android:imeOptions="actionNext"
                android:inputType="number|numberDecimal"
                android:maxLines="1"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:text="Item Quantity: "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_weight="1"
                android:inputType="number"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:id="@+id/edt_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/edt_enter_quantity"
                android:maxLines="1"
                android:numeric="integer"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>





    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_no"
            android:layout_weight="1"
            app:cornerRadius="13dp"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:text="NO"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_yes"
            android:layout_weight="1"
            app:cornerRadius="13dp"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            android:text="SAVE"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>